--- a/ConsoleApp1/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1/ConsoleApp1.csproj
@@ -48,6 +48,7 @@
     <Compile Include="MathClass.cs" />
     <Compile Include="MultiDimensionalArray.cs" />
     <Compile Include="MultiplicationTable.cs" />
+    <Compile Include="OddNumbers.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -57,8 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Documents\C# Training.txt" />
+    <Content Include="Documents\ExamplePrograms.txt" />
     <Content Include="Documents\Sep08th2018.txt" />
     <Content Include="Documents\Sep09th2018.txt" />
+    <Content Include="Documents\Sep11th2018.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
